# project-critique

./: .gitignore  DOCUMENTATION_AUDIT.md  MarketingTools-cost.md  MarketingTools-critique.md  MarketingTools-development-pattern.md  MarketingTools-last-reviewed.txt  MarketingTools-practices.md  Mentible-last-reviewed.txt  NEW_MACHINE_SETUP.md  P0_IMPLEMENTATION_TICKETS.md  PORTFOLIO_SCORECARD.md  PRODUCT_CATALOG.md  README.md  StudyBuddy_OnDemand-last-reviewed.txt  apps_features.drawio  apps_features_mindmap.drawio  atri-sangam-critique.md  atri-sangam-development-pattern.md  atri-sangam-last-reviewed.txt  atri-sangam-practices.md  claude-code-workflow-improvements.md  claude-memory-add-project.md  claude-memory-cost.md  claude-memory-critique.md  claude-memory-development-pattern.md  claude-memory-practices.md  critique-2026-06-22.md  critique-2026-06-29.md  critique-2026-07-06.md  critique-2026-07-13.md  critique-2026-07-20.md  dronePrjs-cost.md  dronePrjs-critique.md  dronePrjs-development-pattern.md  dronePrjs-last-reviewed.txt  dronePrjs-practices.md  elevator-pitch.md  github_checkout.sh  github_update.sh  linkedin-posts.md  (+40 more)
config/: portfolio.toml
portfolio_health/: pyproject.toml
portfolio_health/portfolio_health/: __main__.py  cli.py  collect.py  gitstats.py  health.py  render.py  reposcan.py  sources.py  staleness.py
portfolio_health/scripts/: refresh.sh
portfolio_health/tests/: test_cli.py  test_collect.py  test_gitstats.py  test_health.py  test_render.py  test_reposcan.py  test_sources.py  test_staleness.py
story-video-template/: README.md  (+5 more)
(+2 files in other folders)
