[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-health"
version = "0.1.0"
description = "Portfolio health dashboard collector + renderer"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
portfolio-health = "portfolio_health.cli:main"

[tool.setuptools.packages.find]
include = ["portfolio_health*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
